
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/orange"
            app:expandedTitleTextAppearance="@style/expandedBarTextStyle"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Detail">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_shrimp"
                    android:foreground="@drawable/transparent"
                    android:scaleType="centerCrop"
                    android:contentDescription="Imageview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/ivDetail"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="Garlic Butter Shrimp"
                    android:textColor="@android:color/white"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/tvNameDetail"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:theme="?attr/actionBarTheme"
                android:id="@+id/tbDetail"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_40dp">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                app:cardBackgroundColor="@color/colorYellow"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/cvCalories">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/txt_calories"
                    android:textSize="@dimen/_12sp"
                    android:id="@+id/tvCalories"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/_30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_300_kal"
                    android:textSize="@dimen/_24sp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:id="@+id/tvValueCalories"/>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                app:layout_constraintStart_toEndOf="@id/cvCalories"
                app:layout_constraintTop_toTopOf="@id/cvCalories"
                app:layout_constraintBottom_toBottomOf="@id/cvCalories"
                app:cardBackgroundColor="@color/colorBlue"
                app:cardCornerRadius="@dimen/_10dp"
                android:layout_marginStart="@dimen/_8dp"
                android:id="@+id/cvCarbo">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/txt_carbo"
                    android:textSize="@dimen/_12sp"
                    android:id="@+id/tvCarbo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/_30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_300_kal"
                    android:textSize="@dimen/_24sp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:id="@+id/tvValueCarbo"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                app:layout_constraintStart_toEndOf="@id/cvCarbo"
                app:layout_constraintTop_toTopOf="@id/cvCarbo"
                app:layout_constraintBottom_toBottomOf="@id/cvCarbo"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="@dimen/_10dp"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:id="@+id/cvProtein">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/txt_protein"
                    android:textSize="@dimen/_12sp"
                    android:id="@+id/tvProtein"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/_30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_300_kal"
                    android:textSize="@dimen/_24sp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:id="@+id/tvValueProtein"/>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cvCalories"
                android:layout_marginTop="@dimen/_40dp"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/txt_description"
                android:id="@+id/tvDescriptionDetail"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDescriptionDetail"
                android:text="@string/txt_resep"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tvResepLable"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ingredients"
                app:layout_constraintTop_toBottomOf="@+id/tvResepLable"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                android:id="@+id/tvIngredientsLable1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ingredients"
                app:layout_constraintTop_toBottomOf="@id/tvIngredientsLable1"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tvIngredients"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_8dp"
                app:layout_constraintTop_toBottomOf="@id/tvIngredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/txt_instruction"
                android:id="@+id/tvLabelInstruction"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_4dp"
                android:text="@string/txt_instruction"
                android:id="@+id/tvInstruction"
                app:layout_constraintTop_toBottomOf="@id/tvLabelInstruction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>